--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: |
   CTO and Co-Founder, ThermoAI
 owner: David Watson
 first_published: 2020
-email: david@thermoai.com
+email: david.s.watson11@gmail.com
 #baseurl: "/site"
 permalink: pretty
 collections:
