--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@
 # Site settings
 title: David Watson
 description: |
-  Doctoral Candidate, University of Oxford
-  CTO and Co-Founder, ThermoAI
+  Lecturer in Artificial Intelligence, King's College London
 owner: David Watson
 first_published: 2020
 email: david.s.watson11@gmail.com
