--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: |
   Lecturer in Artificial Intelligence, King's College London
 owner: David Watson
 first_published: 2020
-email: david.s.watson11@gmail.com
+email: david.watson@kcl.ac.uk
 #baseurl: "/site"
 permalink: pretty
 collections:
